# Game-Development-with-Rust-and-WebAssembly

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml
src/: browser.rs  engine.rs  game.rs  lib.rs  segments.rs  sound.rs
src/game/: red_hat_boy.rs
static/: index.html  styles.css
static/fonts/: credits.txt
static/ui/: credits.txt
tests/: app.rs
