# You must change these to your own details.
[package]
name = "walk-the-dog"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
console_error_panic_hook = "0.1.7"
derive_more = "0.99.17"
futures = "0.3.18"
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.186", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.55"
features = ["console", "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement", "Response", "Performance", "KeyboardEvent"]


# These crates are used for running unit tests.
[dev-dependencies]
js-sys = "0.3.55"
wasm-bindgen-test = "0.3.28"
